# caliber

./: .coderabbit.yaml  .coderabbit.yml  .editorconfig  .env.example  .env.test  .envrc  .gitattributes  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVLOG.md  HEALTH_REPORT.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  agents.md  biome.json  bunfig.toml  cliff.toml  deny.toml  fly.api.toml  fly.pg.toml  greptile.json  lefthook.yml  package.json  railway.toml  sdk-python-config.yaml  stryker.conf.json  vercel.json
caliber-agents/: Cargo.toml
caliber-agents/src/: lib.rs
caliber-api/: Cargo.toml  WEBSOCKET_INTEGRATION.md  build.rs
caliber-api/proto/: caliber.proto
caliber-api/src/: auth.rs  cached_db.rs  component.rs  config.rs  constants.rs  db.rs  db_helpers.rs  error.rs  events.rs  grpc.rs  lib.rs  macros.rs  main.rs  middleware.rs  openapi.rs  state.rs  traits.rs  types.rs  validation.rs  workos_auth.rs  ws.rs
caliber-api/src/components/: agent.rs  api_key.rs  artifact.rs  delegation.rs  edge.rs  handoff.rs  lock.rs  message.rs  mod.rs  note.rs  scope.rs  summarization_policy.rs  tenant.rs  trajectory.rs  turn.rs  webhook.rs
caliber-api/src/extractors/: mod.rs  path_id.rs
caliber-api/src/jobs/: mod.rs  saga_cleanup.rs
caliber-api/src/middleware/: auth.rs  idempotency.rs  mod.rs
caliber-api/src/providers/: mod.rs
caliber-api/src/routes/: agent.rs  artifact.rs  batch.rs  billing.rs  config.rs  context.rs  delegation.rs  dev_auth.rs  dsl.rs  edge.rs  generic.rs  graphql.rs  handoff.rs  health.rs  lock.rs  mcp.rs  message.rs  mod.rs  note.rs  pack.rs  scope.rs  search.rs  sso.rs  summarization_policy.rs  tenant.rs  trajectory.rs  turn.rs  user.rs  webhooks.rs  workos_webhooks.rs
caliber-api/src/routes/mcp/: handlers.rs  mod.rs  prompts.rs  resources.rs  (+2 more)
caliber-api/src/services/: delegation_service.rs  handoff_service.rs  lock_service.rs  mod.rs
caliber-api/src/telemetry/: metrics.rs  middleware.rs  mod.rs  tracer.rs
caliber-api/src/types/: agent.rs  api_key.rs  artifact.rs  batch.rs  config.rs  delegation.rs  dsl.rs  edge.rs  handoff.rs  link_registry.rs  links.rs  lock.rs  message.rs  mod.rs  note.rs  scope.rs  search.rs  summarization.rs  tenant.rs  trajectory.rs  turn.rs  webhook.rs
caliber-api/src/utils/: markdown.rs  mod.rs
caliber-api/tests/: agent_property_tests.proptest-regressions  agent_property_tests.rs  artifact_property_tests.rs  auth_property_tests.proptest-regressions  auth_property_tests.rs  broadcast_mutation_property_tests.rs  broadcast_property_tests.rs  dsl_property_tests.rs  dsl_roundtrip_api_property_tests.rs  grpc_parity_property_tests.rs  grpc_parity_ws_property_tests.rs  markdown_dsl_property_tests.rs  note_property_tests.rs  scope_property_tests.proptest-regressions  scope_property_tests.rs  smoke_tests.rs  tenant_property_tests.proptest-regressions  tenant_property_tests.rs  test_support.rs  trajectory_property_tests.proptest-regressions  trajectory_property_tests.rs
caliber-api/tests/support/: auth.rs  auth_with_tenant.rs  db.rs  event_dag.rs  pcp.rs  ws.rs
caliber-context/: Cargo.toml
caliber-context/src/: lib.rs
caliber-core/: Cargo.toml
caliber-core/benches/: context_hotpath.rs
caliber-core/src/: agent.rs  battle_intel.rs  config.rs  context.rs  delegation.rs  effect.rs  embedding.rs  entities.rs  enums.rs  error.rs  event.rs  filter.rs  handoff.rs  health.rs  identity.rs  lib.rs  lib.rs.old  llm.rs  lock.rs
caliber-dsl/: Cargo.toml
caliber-dsl/benches/: dsl_hotpath.rs
caliber-dsl/proptest-regressions/: lib.txt
caliber-dsl/proptest-regressions/parser/: parser.txt
caliber-dsl/src/: lib.rs  pretty_printer.rs
caliber-dsl/src/compiler/: mod.rs
caliber-dsl/src/config/: markdown_printer.rs  mod.rs  parser.rs
caliber-dsl/src/lexer/: mod.rs  scanner.rs  token.rs
caliber-dsl/src/pack/: ast.rs  ir.rs  markdown.rs  mcp.rs  mod.rs  schema.rs
caliber-dsl/src/parser/: ast.rs  mod.rs  parser.rs
caliber-dsl/tests/: markdown_config_tests.rs  markdown_property_tests.proptest-regressions  markdown_property_tests.rs  pack_compose_tests.rs
caliber-events/: Cargo.toml
caliber-events/src/: dag.rs  in_memory.rs  lib.rs
caliber-llm/: Cargo.toml
caliber-llm/src/: lib.rs
caliber-llm/src/providers/: mod.rs
caliber-pcp/: Cargo.toml
caliber-pcp/src/: lib.rs
caliber-pg/: Cargo.toml  META.json  Makefile  README.md  caliber.control  caliber_pg.control
caliber-pg/expected/: caliber_test.out
caliber-pg/sql/: caliber_init.sql  caliber_pg--0.4.3.sql  caliber_pg--0.4.4.sql  caliber_test.sql
caliber-pg/sql/migrations/: V2__tenant_isolation.sql  V3__change_journal.sql  V3__distributed_correctness.sql  V4__dsl_config.sql  V5__rls_policies.sql  V6__tenant_not_null.sql  V7__fix_shared_locks.sql  V8__dsl_pack_source.sql
caliber-pg/src/: agent_heap.rs  artifact_heap.rs  column_maps.rs  conflict_heap.rs  delegation_heap.rs  edge_heap.rs  handoff_heap.rs  heap_ops.rs  index_ops.rs  lib.rs  lock_heap.rs  macros.rs  message_heap.rs  note_heap.rs  row_conversion_tests.rs  scope_heap.rs  trajectory_heap.rs  tuple_extract.rs  turn_heap.rs
caliber-storage/: Cargo.toml
caliber-storage/src/: async_trait.rs  event_dag.rs  hybrid_dag.rs  lib.rs
caliber-storage/src/cache/: freshness.rs  lmdb_backend.rs  mod.rs  read_through.rs  tenant_key.rs  traits.rs  watermark.rs
caliber-test-utils/: Cargo.toml
caliber-test-utils/src/: lib.rs
caliber-tui/: Cargo.toml
caliber-tui/src/: api_client.rs  config.rs  error.rs  events.rs  keys.rs  lib.rs  main.rs  nav.rs  notifications.rs  persistence.rs  realtime.rs  state.rs  theme.rs  traits.rs
caliber-tui/src/views/: agent.rs  artifact.rs  config.rs  dsl.rs  helpers.rs  lock.rs  message.rs  mod.rs  note.rs  scope.rs  tenant.rs  trajectory.rs  turn.rs
caliber-tui/src/widgets/: detail.rs  filter.rs  links.rs  mod.rs  progress.rs  status.rs  syntax.rs  tree.rs
caliber-tui/tests/: tui_property_tests.rs
fuzz/: Cargo.toml  dict.txt
fuzz/fuzz_targets/: lexer_fuzz.rs  parser_fuzz.rs
(+413 files in other folders)
