[workspace]
resolver = "2"
members = [
    "caliber-core",
    "caliber-dsl",
    "caliber-pcp",
    "caliber-storage",
    "caliber-pg",
    "caliber-api",
    "caliber-test-utils",
    "caliber-tui",
]

[workspace.package]
version = "0.4.4"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/caliber-run/caliber"
authors = ["Eassa Ayoub <hello@heyoub.dev>"]
homepage = "https://heyoub.dev"
documentation = "https://caliber.run"

[workspace.dependencies]
# Core dependencies
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sha2 = "0.10"
blake3 = "1.5"
regex = "1.11"
once_cell = "1.20"
hex = "0.4"

# pgrx (only for caliber-pg)
pgrx = { version = "0.16.1", default-features = false }

# Testing
proptest = "1.5"

# OpenAPI / SDK generation
utoipa = { version = "5.3", features = ["axum_extras", "uuid", "chrono"] }
# Keep swagger-ui aligned with axum 0.7 (axum 0.8 comes with utoipa-swagger-ui 9.x).
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
tokio-stream = "0.1"

# gRPC - tonic 0.12 uses axum 0.7 internally, isolated from our axum 0.8
tonic = "0.14"
prost = "0.13"
tonic-build = "0.12"

# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"
tokio = "1.42"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tui-textarea = "0.5"
toml = "0.8"

# Internal crates
caliber-core = { path = "caliber-core", version = "0.4.4" }
caliber-storage = { path = "caliber-storage", version = "0.4.4" }
caliber-pcp = { path = "caliber-pcp", version = "0.4.4" }
caliber-dsl = { path = "caliber-dsl", version = "0.4.4" }
caliber-test-utils = { path = "caliber-test-utils", version = "0.4.4" }
caliber-api = { path = "caliber-api", version = "0.4.4" }

# === PROFILE OPTIMIZATIONS ===

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 2  # Optimize deps even in dev

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[profile.test]
opt-level = 1  # Faster test compilation

[patch.crates-io]
pgrx = { git = "https://github.com/pgcentralfoundation/pgrx", branch = "develop" }
pgrx-tests = { git = "https://github.com/pgcentralfoundation/pgrx", branch = "develop", package = "pgrx-tests" }
