[package]
name = "caliber-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
caliber-core = { workspace = true }
caliber-storage = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
