[package]
name = "caliber-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Multi-agent coordination primitives for CALIBER"

[features]
default = ["openapi"]
openapi = ["dep:utoipa", "caliber-core/openapi", "caliber-pcp/openapi"]

[dependencies]
caliber-core = { workspace = true }
caliber-storage = { workspace = true }
caliber-pcp = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI schema generation (optional)
utoipa = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
