[package]
name = "caliber-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "REST/gRPC/WebSocket API layer for the CALIBER memory framework"

[features]
default = ["openapi", "swagger-ui"]
openapi = ["caliber-core/openapi", "caliber-agents/openapi", "caliber-pcp/openapi"]
swagger-ui = ["dep:utoipa-swagger-ui"]
workos = []  # Enables WorkOS SSO authentication
dev = []  # Enables unauthenticated router for development/testing
db-tests = [] # Enables DB-backed integration/property tests

[dependencies]
# Core CALIBER dependencies
caliber-core = { workspace = true }
caliber-agents = { workspace = true }
caliber-pcp = { workspace = true }
caliber-storage = { workspace = true }
caliber-dsl = { workspace = true }

# Web framework - Axum for REST API
# Keep axum aligned with async-graphql-axum 7.0.0 to avoid mixed axum versions.
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# gRPC framework - Tonic 0.14 (uses axum 0.8, no conflict)
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-prost = "0.14"
prost = "0.14"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# PostgreSQL connection pool
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }

# WebSocket support
tokio-tungstenite = "0.24"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Authentication
jsonwebtoken = "9.3"
secrecy = "0.8"
urlencoding = "2.1"  # For WorkOS URL encoding

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["v5"] }
chrono = { workspace = true }
rand = "0.8"
base64 = "0.22"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, optional = true }

# Streaming support
tokio-stream = { workspace = true, features = ["sync"] }

# GraphQL (pin exact 7.0.0 to stay compatible with rustc 1.85.x)
async-graphql = { version = "=7.0.0", features = ["uuid", "chrono"] }
async-graphql-axum = { version = "=7.0.0" }
async-graphql-derive = { version = "=7.0.0" }
async-graphql-parser = { version = "=7.0.0" }
async-graphql-value = { version = "=7.0.0" }
async-stream = "0.3"
futures-util = "0.3"

# Webhooks
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# OpenTelemetry (http exporter to avoid tonic/axum conflict)
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-client"] }
opentelemetry-prometheus = "0.27"
tracing-opentelemetry = "0.28"
opentelemetry-http = "0.27"

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }

# Utilities
regex = "1.10"
once_cell = "1.19"

# Rate limiting
governor = "0.8"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"
required-features = ["openapi"]

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
proptest = { workspace = true }
caliber-test-utils = { workspace = true }
