[package]
name = "caliber-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Core data types for the CALIBER memory framework"

[features]
default = ["openapi"]
openapi = ["dep:utoipa"]

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
bitflags = { version = "2", features = ["serde"] }
async-trait = "0.1"

# OpenAPI schema generation (optional)
utoipa = { version = "5.3", features = ["uuid", "chrono"], optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = "0.8"

[[bench]]
name = "context_hotpath"
harness = false
path = "benches/context_hotpath.rs"
