[package]
name = "caliber-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "DSL lexer/parser/pretty-printer for CALIBER configuration"

[dependencies]
caliber-core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = { workspace = true }
