[package]
name = "caliber-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "DSL lexer/parser/pretty-printer for CALIBER configuration"

[dependencies]
caliber-core = { workspace = true }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = { workspace = true }
toml = "0.9"

[dev-dependencies]
proptest = { workspace = true }
criterion = "0.5"

[[bench]]
name = "dsl_hotpath"
harness = false
path = "benches/dsl_hotpath.rs"
