[package]
name = "caliber-events"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Event DAG trait and operations for CALIBER"

[features]
default = ["openapi"]
openapi = ["dep:utoipa", "caliber-core/openapi"]

[dependencies]
caliber-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# OpenAPI schema generation (optional)
utoipa = { version = "5.3", features = ["uuid", "chrono"], optional = true }

[dev-dependencies]
proptest = { workspace = true }
