[package]
name = "caliber-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
caliber-core = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["sync", "time"] }
async-trait = "0.1"
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
