[package]
name = "caliber-pcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["openapi"]
openapi = ["dep:utoipa", "caliber-core/openapi"]

[dependencies]
caliber-core = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

# OpenAPI schema generation (optional)
utoipa = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
