[package]
name = "caliber-pcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Persistent Context Protocol validation and checkpointing for CALIBER"

[features]
default = ["openapi"]
openapi = ["dep:utoipa", "caliber-core/openapi"]

[dependencies]
caliber-core = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

# OpenAPI schema generation (optional)
utoipa = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
