[package]
name = "caliber-pg"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "pgrx_embed"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]
# pg_test feature gates pgrx-tests dependency (currently broken with PG18)
# Once pgrx-tests is fixed upstream, enable with: cargo pgrx test pg18 --features pg_test
pg_test = ["dep:pgrx-tests"]
debug = []  # Enable debug endpoints (caliber_debug_*)

[dependencies]
pgrx = { workspace = true }
caliber-core = { workspace = true }
caliber-storage = { workspace = true }
caliber-context = { workspace = true }
caliber-pcp = { workspace = true }
caliber-llm = { workspace = true }
caliber-agents = { workspace = true }
caliber-dsl = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

# pgrx-tests is optional - gated behind pg_test feature
# Currently broken with Postgres 18 (Pg_magic_struct field changes)
# Tracking: https://github.com/pgcentralfoundation/pgrx/issues
[dependencies.pgrx-tests]
version = "0.16"
features = ["pg_test"]
optional = true
