[package]
name = "caliber-pg"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pgrx_embed_caliber_pg"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
# BREAKING CHANGE (v0.4.0): CALIBER requires PostgreSQL 18+
# Older versions (pg13-pg17) are no longer supported.
# This enables use of PG18 features and simplifies maintenance.
pg18 = ["pgrx/pg18"]
# pg_test feature gates pgrx-tests dependency (currently broken with PG18)
# Once pgrx-tests is fixed upstream, enable with: cargo pgrx test pg18 --features pg_test
pg_test = ["dep:pgrx-tests"]
debug = []  # Enable debug endpoints (caliber_debug_*)

[dependencies]
pgrx = { workspace = true }
caliber-core = { workspace = true }
caliber-storage = { workspace = true }
caliber-context = { workspace = true }
caliber-pcp = { workspace = true }
caliber-llm = { workspace = true }
caliber-agents = { workspace = true }
caliber-dsl = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

# pgrx-tests is optional - gated behind pg_test feature
# Currently broken with Postgres 18 (Pg_magic_struct field changes)
# Tracking: https://github.com/pgcentralfoundation/pgrx/issues
[dependencies.pgrx-tests]
version = "0.16"
features = ["pg_test"]
optional = true
