[package]
name = "caliber-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
caliber-core = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
proptest = { workspace = true }
