[package]
name = "caliber-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Storage traits and mock implementation for CALIBER entities"

[dependencies]
caliber-core = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
async-trait = "0.1"
heed = "0.20"
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
