[package]
name = "caliber-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Terminal UI client for interacting with CALIBER"

[dependencies]
caliber-core = { workspace = true }
caliber-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tonic = { workspace = true, features = ["transport"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
